RESOLVED FIXED14896
SVG InlineText/Flow box sizes don't take rotated glyphs into account
https://bugs.webkit.org/show_bug.cgi?id=14896
Summary SVG InlineText/Flow box sizes don't take rotated glyphs into account
Nikolas Zimmermann
Reported 2007-08-07 17:13:01 PDT
As the summary says, this has to be fixed.
Attachments
Initial patch (10.58 KB, patch)
2007-08-07 17:16 PDT, Nikolas Zimmermann
oliver: review+
Nikolas Zimmermann
Comment 1 2007-08-07 17:16:25 PDT
Created attachment 15860 [details] Initial patch
Oliver Hunt
Comment 2 2007-08-07 17:24:03 PDT
Comment on attachment 15860 [details] Initial patch Looks good, nice to see so much code fleeing. Do we give nice rects for web inspectorator?
Nikolas Zimmermann
Comment 3 2007-08-07 17:27:49 PDT
(In reply to comment #2) > (From update of attachment 15860 [details] [edit]) > Looks good, nice to see so much code fleeing. > > Do we give nice rects for web inspectorator? Yes, all rects perfect now. The common case didn't change at all. Greetings, Niko
Nikolas Zimmermann
Comment 4 2007-08-07 17:32:25 PDT
Landed in r24918.
Note You need to log in before you can comment on or make changes to this bug.