Reviewed by Oliver.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=14896 (SVG InlineText/Flow box sizes don't take rotated glyphs into account)

Introduce new helper function calculateGlyphBoundaries, which takes into account any per-character transformation.
This fixes box size calculations in svg/W3C-SVG-1.1/text-text-07-t.svg, svg/batik/text/textEffect3.svg (rotated glyphs)
-> These strings can be properly selected now, just as well as text path elements.



Canonical link: https://commits.webkit.org/20425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26435 268f45cc-cd09-0410-ab3c-d52691b4dbfc