WebCore/rendering/SVGInlineTextBox.cpp
@@ -78,6 +78,33 @@ float SVGInlineTextBox::calculateGlyphHeight(RenderStyle* style, int offset) con
     return style->font().ascent() + style->font().descent();
 }
 
+FloatRect SVGInlineTextBox::calculateGlyphBoundaries(RenderStyle* style, int offset, const SVGChar& svgChar) const
+{
+    const Font& font = style->font();
+
+    // Take RTL text into account and pick right glyph width/height.
+    float glyphWidth = 0.0;
+
+    if (!m_reversed)
+        glyphWidth = calculateGlyphWidth(style, offset);
+    else
+        glyphWidth = calculateGlyphWidth(style, start() + end() - offset);
+
+    float x1 = svgChar.x;
+    float x2 = svgChar.x + glyphWidth;
+
+    float y1 = svgChar.y - font.ascent();
+    float y2 = svgChar.y + font.descent();
+
+    FloatRect glyphRect(x1, y1, x2 - x1, y2 - y1);
+
+    // Take per-character transformations into account
+    if (!svgChar.transform.isIdentity())
+        glyphRect = svgChar.transform.mapRect(glyphRect);
+
+    return glyphRect;
+}
+
 SVGChar* SVGInlineTextBox::closestCharacterToPosition(int x, int y, int& offset) const
 {
     // Find corresponding text chunk for our inline box & reference x position
@@ -127,17 +154,11 @@ SVGChar* SVGInlineTextBox::closestCharacterToPosition(int x, int y, int& offset)
                 unsigned int newOffset = start() + (itChar - itCharBegin) + firstRangeInFirstChunkStartOffset;
 
                 // Take RTL text into account and pick right glyph width/height.
-                float glyphWidth = 0.0;
-                float glyphHeight = 0.0;
-
-                if (!m_reversed) {
-                    glyphWidth = calculateGlyphWidth(style, newOffset);
-                    glyphHeight = calculateGlyphHeight(style, newOffset);
-                } else {    
-                    glyphWidth = calculateGlyphWidth(style, start() + end() - newOffset);
-                    glyphHeight = calculateGlyphHeight(style, start() + end() - newOffset);
+                if (m_reversed)
                     newOffset = start() + end() - newOffset;
-                }
+
+                float glyphWidth = calculateGlyphWidth(style, newOffset);
+                float glyphHeight = calculateGlyphHeight(style, newOffset);
 
                 // Calculate distances relative to the glyph mid-point. I hope this is accurate enough.
                 float xDistance = (*itChar).x + glyphWidth / 2.0 - x;
@@ -230,9 +251,7 @@ bool SVGInlineTextBox::nodeAtPoint(const HitTestRequest& request, HitTestResult&
 {
     ASSERT(!isLineBreak());
 
-    RenderStyle* style = textObject()->style(m_firstLine);
-    IntRect rect = selectionRect(0, -style->font().ascent(), 0, len());
-
+    IntRect rect = selectionRect(0, 0, 0, len());
     if (object()->style()->visibility() == VISIBLE && rect.contains(x, y)) {
         object()->updateHitTestResult(result, IntPoint(x - tx, y - ty));
         return true;
@@ -241,21 +260,19 @@ bool SVGInlineTextBox::nodeAtPoint(const HitTestRequest& request, HitTestResult&
     return false;
 }
 
-IntRect SVGInlineTextBox::selectionRect(int tx, int ty, int startPos, int endPos)
+IntRect SVGInlineTextBox::selectionRect(int, int, int startPos, int endPos)
 {
     if (startPos >= endPos)
         return IntRect();
 
     // TODO: Actually respect startPos/endPos - we're returning the _full_ selectionRect
     // here. This won't lead to visible bugs, but to extra work being done. Investigate.
-    
+
     // Find corresponding text chunk for our inline box & reference x position
     SVGRootInlineBox* rootBox = svgRootInlineBox();
     Vector<SVGTextChunk>& chunks = const_cast<Vector<SVGTextChunk>& >(rootBox->svgTextChunks());
 
     RenderStyle* style = textObject()->style();
-    const Font& font = style->font();
-
     FloatRect selectionRect;
     
     Vector<SVGTextChunk>::iterator it = chunks.begin();
@@ -289,31 +306,8 @@ IntRect SVGInlineTextBox::selectionRect(int tx, int ty, int startPos, int endPos
             for (Vector<SVGChar>::iterator itChar = itCharBegin; itChar != itCharEnd; ++itChar) {
                 unsigned int newOffset = start() + (itChar - itCharBegin) + firstRangeInFirstChunkStartOffset;
 
-                // Take RTL text into account and pick right glyph width/height.
-                float glyphWidth = 0.0;
-                float glyphHeight = 0.0;
-
-                if (!m_reversed) {
-                    glyphWidth = calculateGlyphWidth(style, newOffset);
-                    glyphHeight = calculateGlyphHeight(style, newOffset);
-                } else {    
-                    glyphWidth = calculateGlyphWidth(style, start() + end() - newOffset);
-                    glyphHeight = calculateGlyphHeight(style, start() + end() - newOffset);
-                }
-
-                float x1 = (*itChar).x;
-                float x2 = (*itChar).x + glyphWidth;
-
-                float y1 = (*itChar).y - font.ascent();
-                float y2 = (*itChar).y + font.descent();
-
-                FloatRect glyphRect(x1, y1, x2 - x1, y2 - y1);
-
-                // Take per-character transformations into account
-                if (!(*itChar).transform.isIdentity())
-                    glyphRect = (*itChar).transform.mapRect(glyphRect);
-
-                selectionRect.unite(glyphRect);
+                int offset = m_reversed ? start() + end() - newOffset : newOffset;
+                selectionRect.unite(calculateGlyphBoundaries(style, offset, *itChar));
             }
 
             chunkOffset += range.endOffset - range.startOffset;
