WebCore/rendering/SVGInlineTextBox.h
@@ -52,6 +52,8 @@ namespace WebCore {
         float calculateGlyphWidth(RenderStyle*, int offset) const;
         float calculateGlyphHeight(RenderStyle*, int offset) const;
 
+        FloatRect calculateGlyphBoundaries(RenderStyle*, int offset, const SVGChar&) const;
+
     private:
         friend class RenderSVGInlineText;
         bool svgCharacterHitsPosition(int x, int y, int& offset) const;
